--- a/.github/ISSUE_TEMPLATE/optical-all.yml
+++ b/.github/ISSUE_TEMPLATE/optical-all.yml
@@ -1,25 +1,21 @@
----
 name: Optical - All Products
-about: Report an issue or propose a change for the Optical PFSes, which applies to more
-  than one product type.
+description: Report an issue or propose a change for the Optical PFSes, which applies to more than one product type.
 labels:
-- Optical
-- needs discussion
+  - Optical
+  - needs discussion
 body:
   - type: input
     id: version
     attributes:
       label: PFS Version(s)
       description: What version(s) of the PFSes are you referring to?
-      placeholder: 0.0
+      placeholder: "e.g. 5.0.1"
   - type: input
     id: req-no
     attributes:
       label: Requirement number(s)
       description: Which requirement number(s) are you referring to?
-      placeholder: 0.0
-    validations:
-      required: false
+      placeholder: "e.g. 1.6"
   - type: textarea
     id: description
     attributes:
@@ -28,7 +24,4 @@ body:
       placeholder: Add your description here...
     validations:
       required: true
-
----
-
 
