--- a/.github/ISSUE_TEMPLATE/optical-sr.yml
+++ b/.github/ISSUE_TEMPLATE/optical-sr.yml
@@ -1,26 +1,24 @@
----
-name: 'Optical: Surface Temperature [ST]'
-about: 'Report an issue or propose a change for the Optical PFSes, which applies for
-  Surface Temperature [ST] products. '
+name: 'Optical: Surface Reflectance [SR]'
+description: Report an issue or propose a change for the Optical PFSes, which applies for Surface Reflaectance \[SR] products.
 labels:
-- Optical
-- 'Optical: ST'
-- needs discussion
+  - Optical
+  - 'Optical: SR'
+  - needs discussion
 body:
   - type: input
     id: version
     attributes:
-      label: PFS Version
-      description: What version of the PFS are you referring to?
-      placeholder: 0.0
+      label: PFS Version(s)
+      description: What version(s) of the PFSes are you referring to?
+      placeholder: "e.g. 5.0.1"
+    validations:
+      required: true
   - type: input
     id: req-no
     attributes:
       label: Requirement number(s)
       description: Which requirement number(s) are you referring to?
-      placeholder: 0.0
-    validations:
-      required: false
+      placeholder: "e.g. 1.6"
   - type: textarea
     id: description
     attributes:
@@ -29,7 +27,4 @@ body:
       placeholder: Add your description here...
     validations:
       required: true
-
----
-
 
