--- a/.github/ISSUE_TEMPLATE/optical-st.yml
+++ b/.github/ISSUE_TEMPLATE/optical-st.yml
@@ -1,25 +1,23 @@
----
-name: SAR - All Products
-about: Report an issue or propose a change for the SAR PFS, which applies to more
-  than one product type.
+name: 'Optical: Surface Temperature [ST]'
+description: Report an issue or propose a change for the Optical PFSes, which applies for Surface Temperature \[ST] products.
 labels:
-- SAR
-- needs discussion
+  - 'Optical: ST'
+  - needs discussion
 body:
   - type: input
     id: version
     attributes:
       label: PFS Version(s)
       description: What version(s) of the PFSes are you referring to?
-      placeholder: 0.0
+      placeholder: "e.g. 5.0.1"
+    validations:
+      required: true
   - type: input
     id: req-no
     attributes:
       label: Requirement number(s)
       description: Which requirement number(s) are you referring to?
-      placeholder: 0.0
-    validations:
-      required: false
+      placeholder: "e.g. 1.6"
   - type: textarea
     id: description
     attributes:
@@ -28,7 +26,4 @@ body:
       placeholder: Add your description here...
     validations:
       required: true
-
----
-
 
