--- a/.github/ISSUE_TEMPLATE/sar-all.yml
+++ b/.github/ISSUE_TEMPLATE/sar-all.yml
@@ -1,26 +1,20 @@
----
-name: 'Optical: Surface Reflectance [SR]'
-about: 'Report an issue or propose a change for the Optical PFSes, which applies for
-  Surface Reflaectance [SR] products. '
-labels:
-- Optical
-- 'Optical: SR'
-- needs discussion
+name: SAR - All Products
+description: Report an issue or propose a change for the SAR PFS, which applies to more than one product type.
+  - SAR
+  - needs discussion
 body:
   - type: input
     id: version
     attributes:
-      label: PFS Version
-      description: What version of the PFS are you referring to?
-      placeholder: 0.0
+      label: PFS Version(s)
+      description: What version(s) of the PFSes are you referring to?
+      placeholder: "e.g. 1.0"
   - type: input
     id: req-no
     attributes:
       label: Requirement number(s)
       description: Which requirement number(s) are you referring to?
-      placeholder: 0.0
-    validations:
-      required: false
+      placeholder: "e.g. 1.6"
   - type: textarea
     id: description
     attributes:
@@ -29,7 +23,4 @@ body:
       placeholder: Add your description here...
     validations:
       required: true
-
----
-
 
