--- a/.github/ISSUE_TEMPLATE/sar-nrb.yml
+++ b/.github/ISSUE_TEMPLATE/sar-nrb.yml
@@ -1,26 +1,24 @@
----
-name: SAR - Ocean Radar Backscatter [ORB]
-about: 'Report an issue or propose a change for the SAR PFS, which applies for the
-  Ocean Radar Backscatter [ORB] products. '
+name: SAR - Normalised Radar Backscatter [NRB]
+description: Report an issue or propose a change for the SAR PFS, which applies for the Normalised Radar Backscatter \[NRB] products.
 labels:
-- SAR
-- 'SAR: ORB'
-- needs discussion
+  - SAR
+  - 'SAR: NRB'
+  - needs discussion
 body:
   - type: input
     id: version
     attributes:
       label: PFS Version
       description: What version of the PFS are you referring to?
-      placeholder: 0.0
+      placeholder: "e.g. 1.0"
+    validations:
+      required: true
   - type: input
     id: req-no
     attributes:
       label: Requirement number(s)
       description: Which requirement number(s) are you referring to?
-      placeholder: 0.0
-    validations:
-      required: false
+      placeholder: "e.g. 1.6"
   - type: textarea
     id: description
     attributes:
@@ -29,7 +27,4 @@ body:
       placeholder: Add your description here...
     validations:
       required: true
-
----
-
 
