--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: mkdir docs
-      - uses: docker://pandoc/core:3.2
+      - name: AR
+        uses: docker://pandoc/core:3.2
         with:
           args: >-
             --standalone
@@ -22,6 +23,60 @@ jobs:
             --output=docs/CEOS-ARD_PFS_Aquatic-Reflectance_latest.docx
             --resource-path=Specifications/Aquatic-Reflectance
             Specifications/Aquatic-Reflectance/PFS.md
+      - name: NLSR
+        uses: docker://pandoc/core:3.2
+        with:
+          args: >-
+            --standalone
+            --shift-heading-level-by=-1
+            --from=gfm
+            --reference-doc=.github/pandoc-template.docx
+            --lua-filter=.github/pagebreak.lua
+            --output=docs/CEOS-ARD_PFS_Nighttime-Lights-Surface-Radiance_latest.docx
+            --resource-path=Specifications/Nighttime-Lights-Surface-Radiance
+            Specifications/Nighttime-Lights-Surface-Radiance/PFS.md
+      - name: SR
+        uses: docker://pandoc/core:3.2
+        with:
+          args: >-
+            --standalone
+            --shift-heading-level-by=-1
+            --from=gfm
+            --reference-doc=.github/pandoc-template.docx
+            --lua-filter=.github/pagebreak.lua
+            --output=docs/CEOS-ARD_PFS_Surface-Reflectance_latest.docx
+            --resource-path=Specifications/Surface-Reflectance
+            Specifications/Surface-Reflectance/PFS.md
+      - name: ST
+        uses: docker://pandoc/core:3.2
+        with:
+          args: >-
+            --standalone
+            --shift-heading-level-by=-1
+            --from=gfm
+            --reference-doc=.github/pandoc-template.docx
+            --lua-filter=.github/pagebreak.lua
+            --output=docs/CEOS-ARD_PFS_Surface-Temperature_latest.docx
+            --resource-path=Specifications/Surface-Temperature
+            Specifications/Surface-Temperature/PFS.md
+            Specifications/Surface-Temperature/annex-1-card4l-requirement-examples.md
+      - name: SAR
+        uses: docker://pandoc/core:3.2
+        with:
+          args: >-
+            --standalone
+            --shift-heading-level-by=-1
+            --from=gfm
+            --reference-doc=.github/pandoc-template.docx
+            --lua-filter=.github/pagebreak.lua
+            --output=docs/CEOS-ARD_PFS_Synthetic-Aperture-Radar_latest.docx
+            --resource-path=Specifications/Synthetic-Aperture-Radar
+            Specifications/Synthetic-Aperture-Radar/PFS.md
+            Specifications/Synthetic-Aperture-Radar/annex-1.1-general-processing-roadmap.md
+            Specifications/Synthetic-Aperture-Radar/annex-1.2-topographic-phase-removal.md
+            Specifications/Synthetic-Aperture-Radar/annex-2-polarimetric-radar.md
+            Specifications/Synthetic-Aperture-Radar/annex-3-ocean-radar-backscatter-example.md
+            Specifications/Synthetic-Aperture-Radar/annex-4-geocoded-single-look-complex-example.md
       - uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
