--- a/pfs/SAR-NRB/document.yaml
+++ b/pfs/SAR-NRB/document.yaml
@@ -4,8 +4,8 @@ type: Synthetic Aperture Radar
 applies_to: |-
   This PFS is specifically aimed at users interested in exploring the potential of SAR but who may lack the expertise or facilities for SAR processing.
 
-  The CEOS-ARD Normalised Radar Backscatter (NRB) specification describes products that have been subject to Radiometric Terrain Correction (RTC) and are provided in the Gamma-Nought ($`\gamma^0_T`$) backscatter convention [@small2011], which mitigates the variations from diverse observation geometries and is recommended for most land applications.
-  An additional metadata layer can be optionally provided for conversion of $`\gamma^0_T`$ to Sigma-Nought ($`\sigma^0_T`$) backscatter layer for compatibility with legacy software or numerical models.
+  The CEOS-ARD Normalised Radar Backscatter (NRB) specification describes products that have been subject to Radiometric Terrain Correction (RTC) and are provided in the Gamma-Nought ($\gamma^0_T$) backscatter convention [@small2011], which mitigates the variations from diverse observation geometries and is recommended for most land applications.
+  An additional metadata layer can be optionally provided for conversion of $\gamma^0_T$ to Sigma-Nought ($\sigma^0_T$) backscatter layer for compatibility with legacy software or numerical models.
   As the NRB product contains backscatter values only, it cannot be directly used for SAR polarimetry or interferometric applications that require relative polarization phase or local phase estimates respectively.
   However, as an option, a “flattened” phase data layer can be provided with an NRB product for enabling InSAR analysis.
   The flattened phase is the interferometric phase, with respect to a reference orbit and to a DEM, for which the topographic phase contribution is removed. 
