--- a/.github/ISSUE_TEMPLATE/sar-pol.yml
+++ b/.github/ISSUE_TEMPLATE/sar-pol.yml
@@ -1,5 +1,5 @@
 name: SAR - Polarimetric Radar [POL]
-description: Report an issue or propose a change for the SAR PFS, which applies for the Polarimetric Radar POL products.
+description: Report an issue or propose a change for the SAR PFS, which applies for the Polarimetric Radar \[POL] products.
 labels:
   - SAR
   - 'SAR: GLSC'
