--- a/pfs/SR/requirements.yaml
+++ b/pfs/SR/requirements.yaml
@@ -1,5 +1,13 @@
 - category: general_metadata
   requirements:
+    - metadata/traceability
+    - metadata/machine-readability
+    # todo: the following should probably be added to the requirements
+    # - metadata/product-type
+    # - metadata/license
+    - metadata/time
+- category: source_metadata
+  requirements:
     - example/example
 - category: per_pixel_metadata
   requirements:
