--- a/sections/introduction/when_is_a_product_ceos_ard.yaml
+++ b/sections/introduction/when_is_a_product_ceos_ard.yaml
@@ -5,7 +5,7 @@ description: |-
   - that product has been assessed as meeting CEOS-ARD requirements by the agency or other entities responsible for production and distribution of the product, and
   - that the assessment has been peer reviewed by the relevant CEOS team(s).
 
-  Agencies or other entities considering undertaking an assessment process should consult the [CEOS-ARD Governance Framework](https://ceos.org/ard/files/CEOS_ARD_Governance_Framework_18-October-2021.pdf) or contact <mailto:ard-contact@lists.ceos.org>.
+  Agencies or other entities considering undertaking an assessment process should consult the [CEOS-ARD Governance Framework](https://ceos.org/ard/files/CEOS_ARD_Governance_Framework_18-October-2021.pdf) or contact <ard-contact@lists.ceos.org>.
 
   A product can continue to use CEOS-ARD branding as long as its generation and distribution remain consistent with the peer-reviewed assessment.
 glossary:
