--- a/pfs/SAR-NRB/document.yaml
+++ b/pfs/SAR-NRB/document.yaml
@@ -11,6 +11,9 @@ applies_to: |-
   The flattened phase is the interferometric phase, with respect to a reference orbit and to a DEM, for which the topographic phase contribution is removed. 
 
 introduction:
+  - what-are-ceos-ard-products
+  - when-is-a-product-ceos-ard
+  - difference-threshold-goal
 
 # Only glossary entries that are not specific to certain requirements or sections are listed here.
 glossary:
