--- a/pfs/SAR-ORB/document.yaml
+++ b/pfs/SAR-ORB/document.yaml
@@ -10,6 +10,9 @@ applies_to: |-
   Nonetheless, an advanced ORB product could include the upper diagonal of the polarimetric $\sigma^0$ covariance matrix for enabling advanced polarimetric analysis (similar to the POL product). 
 
 introduction:
+  - what-are-ceos-ard-products
+  - when-is-a-product-ceos-ard
+  - difference-threshold-goal
 
 # Only glossary entries that are not specific to certain requirements or sections are listed here.
 glossary:
