--- a/pfs/SAR-POL/document.yaml
+++ b/pfs/SAR-POL/document.yaml
@@ -8,6 +8,9 @@ applies_to: |-
   This extension is required in order to better support Level-1 SLC polarimetric data, including full-polarimetric modes (e.g., RADARSAT-2, ALOS-2/4, SAOCOM-1 and future missions), and hybrid or linear dual-polarimetric modes (i.e., Compact Polarimetric mode available on RCM, SAOCOM and the upcoming NISAR mission).
 
 introduction:
+  - what-are-ceos-ard-products
+  - when-is-a-product-ceos-ard
+  - difference-threshold-goal
   - sar-pol-processing-levels
   - sar-pol-limitations
 
