--- a/pfs/NLSR/document.yaml
+++ b/pfs/NLSR/document.yaml
@@ -7,6 +7,9 @@ applies_to: |-
   however, the Specification is not inherently limited to this resolution.
 
 introduction:
+  - what-are-ceos-ard-products
+  - when-is-a-product-ceos-ard
+  - difference-threshold-goal
 
 # Only glossary entries that are not specific to certain requirements or sections are listed here.
 glossary:
