--- a/pfs/SAR-GSLC/document.yaml
+++ b/pfs/SAR-GSLC/document.yaml
@@ -13,6 +13,9 @@ applies_to: |-
   The GSLC product may optionally be radiometrically terrain corrected such that the squared amplitude yields $\gamma^0_T$.
 
 introduction:
+  - what-are-ceos-ard-products
+  - when-is-a-product-ceos-ard
+  - difference-threshold-goal
 
 # Only glossary entries that are not specific to certain requirements or sections are listed here.
 glossary:
