--- a/requirements/metadata/machine-readability-sar.yaml
+++ b/requirements/metadata/machine-readability-sar.yaml
@@ -6,8 +6,9 @@ threshold:
     Metadata is provided in a structure that enables a computer algorithm to be used consistently and to automatically identify and extract each component part for further use.
   notes:
 goal:
+  # todo: change reference to CEOS-ARD SAR Metadata Specifications, v.1.1
   description: |-
-    As threshold, but metadata is formatted in accordance with CEOS-ARD SAR Metadata Specifications, v.1.1, or in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2, Climate and Forecast (CF) convention, the Attribute Convention for Data Discovery (ACDD), etc. 
+    As threshold, but metadata is formatted in accordance with CEOS-ARD SAR Metadata Specifications, v.1.1, or in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2, Climate and Forecast (CF) convention, the Attribute Convention for Data Discovery (ACDD), etc.
   notes:
 glossary:
 references:
