--- a/requirements/metadata/traceability-st.yaml
+++ b/requirements/metadata/traceability-st.yaml
@@ -11,7 +11,8 @@ goal:
   # todo: the two links above are additions only in ST - can we align this with tracability.yaml?
   # todo: both documents lead to an error message only: "You do not have permission to view this document." which makes them useless.
   notes:
-    - Traceability requires an estimate of measurement uncertainty.
+    # todo: replace reference to 3.2 with a propert reference with the new ids
+    - Relationship to item 3.2. Traceability requires an estimate of measurement uncertainty.
     - Information on traceability should be available in the metadata as a single DOI landing page.
 glossary:
   - si
