--- a/requirements/metadata/traceability.yaml
+++ b/requirements/metadata/traceability.yaml
@@ -4,7 +4,8 @@ threshold: null
 goal:
   description: Data must be traceable to SI reference standard.
   notes:
-    - Traceability requires an estimate of measurement uncertainty.
+    # todo: replace reference to 3.2/3.5 with a propert reference with the new ids
+    - Relationship to item 3.2 (SR/NLSR) or item 3.5 (SAR). Traceability requires an estimate of measurement uncertainty.
     - Information on traceability should be available in the metadata as a single DOI landing page.
 glossary:
   - si
