--- a/requirements/cloud-optimized-formats.yaml
+++ b/requirements/cloud-optimized-formats.yaml
@@ -4,5 +4,6 @@ threshold: null
 goal:
   description: |-
     All files are provided using cloud-optimized file formats.
+dependencies:
 glossary:
 references:
