--- a/requirements/example.yaml
+++ b/requirements/example.yaml
@@ -9,6 +9,11 @@ goal:
     This is a goal requirement.
   notes:
     - This is a note.
+# Dependencies are requirements that must be met for this requirement.
+# Dependencies are resolved as follows:
+# 1. Refers to the requirement in the same requirement category.
+# 2. Refers to the requirement in any other category.
+dependencies:
 glossary:
   - doi
 references:
