--- a/requirements/metadata/license.yaml
+++ b/requirements/metadata/license.yaml
@@ -7,6 +7,7 @@ threshold:
     If required by the data provider, copyright is indicated in the metadata.
   notes:
 goal: null
+dependencies:
 glossary:
 references:
 metadata:
