--- a/requirements/metadata/machine-readability.yaml
+++ b/requirements/metadata/machine-readability.yaml
@@ -8,6 +8,7 @@ goal:
   description: |-
     As threshold, but metadata should be provided in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2.
   notes:
+dependencies:
 glossary:
 references:
   - iso19115_2_2009
