--- a/requirements/metadata/machine-readability-sar.yaml
+++ b/requirements/metadata/machine-readability-sar.yaml
@@ -10,6 +10,7 @@ goal:
   description: |-
     As threshold, but metadata is formatted in accordance with CEOS-ARD SAR Metadata Specifications, v.1.1, or in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2, Climate and Forecast (CF) convention, the Attribute Convention for Data Discovery (ACDD), etc.
   notes:
+dependencies:
 glossary:
 references:
   - iso19115_2_2009
