--- a/requirements/metadata/traceability.yaml
+++ b/requirements/metadata/traceability.yaml
@@ -7,6 +7,7 @@ goal:
     # todo: replace reference to 3.2/3.5 with a propert reference with the new ids
     - Relationship to item 3.2 (SR/NLSR) or item 3.5 (SAR). Traceability requires an estimate of measurement uncertainty.
     - Information on traceability should be available in the metadata as a single DOI landing page.
+dependencies:
 glossary:
   - si
 references:
