--- a/sections/requirement-categories/source-metadata.yaml
+++ b/sections/requirement-categories/source-metadata.yaml
@@ -1,3 +1,4 @@
+id: source
 title: Source Metadata
 description: |-
   These are metadata records describing (detailing) **each** acquisition (source data) used to generate the ARD product.
