--- a/sections/requirement-categories/general-metadata.yaml
+++ b/sections/requirement-categories/general-metadata.yaml
@@ -1,5 +1,5 @@
 id: general
-title: General metadata
+title: General Metadata
 description: |-
   These are metadata records describing a distributed collection of pixels.
   The collection of pixels referred to must be contiguous in space and time.
