--- a/requirements/metadata/time-sar.yaml
+++ b/requirements/metadata/time-sar.yaml
@@ -6,10 +6,11 @@ threshold:
   description: |-
     Number of source data acquisitions of the data collection is identified.
     The start and stop UTC time of data collection is identified in the metadata, expressed in date/time.
-    In case of composite products, the dates/times of the first and last data takes and the per-pixel metadata (item 2.8, Acquisition ID Image) is provided with the product.
+    In case of composite products, the dates/times of the first and last data takes and the per-pixel metadata [@per-pixel-metadata/acquisition-id] is provided with the product.
   notes:
 goal: null
 dependencies:
+  - per-pixel-metadata/acquisition-id
 glossary:
   - utc
 references:
