--- a/sections/requirement-categories/radiometrically-corrected-measurements.yaml
+++ b/sections/requirement-categories/radiometrically-corrected-measurements.yaml
@@ -1,3 +1,4 @@
+id: measurements
 title: Radiometrically Corrected Measurements
 description: |-
   The requirements indicate the necessary outcomes and, to some degree, the minimum steps necessary to be deemed to have achieved those outcomes.
