--- a/pfs/SR/requirements.yaml
+++ b/pfs/SR/requirements.yaml
@@ -17,7 +17,7 @@
     - example
 - category: radiometric-atmospheric-corrections
   requirements:
-    - example
+    - measurements/uncertainty # 3.2
 - category: geometric-corrections
   requirements:
-    - geometric-corrections/geometric-corrections
+    - corrections/geometric-corrections
