--- a/pfs/ST/requirements.yaml
+++ b/pfs/ST/requirements.yaml
@@ -17,7 +17,7 @@
     - example
 - category: radiometric-atmospheric-corrections
   requirements:
-    - example
+    - measurements/uncertainty-st # 3.3
 - category: geometric-corrections
   requirements:
-    - geometric-corrections/geometric-corrections
+    - corrections/geometric-corrections
