--- a/sections/requirement-categories/radiometric-atmospheric-corrections.yaml
+++ b/sections/requirement-categories/radiometric-atmospheric-corrections.yaml
@@ -1,3 +1,4 @@
+id: corrections
 title: Radiometric and Atmospheric Corrections
 description: |-
   The following requirements must be met for all pixels in a collection.
