--- a/pfs/SAR-NRB/requirements.yaml
+++ b/pfs/SAR-NRB/requirements.yaml
@@ -12,6 +12,7 @@
     - metadata/product-type
     - metadata/bounding-box
     - metadata/crs
+    - metadata/geometric-correction-algorithm # 4.1
 - category: per-pixel-metadata
   requirements:
     - cloud-optimized-formats
@@ -23,4 +24,4 @@
     - measurements/flattened-phase # 3.7
 - category: geometric-corrections
   requirements:
-    - example
+    - corrections/dem
