--- a/requirements/metadata/product-type.yaml
+++ b/requirements/metadata/product-type.yaml
@@ -2,7 +2,7 @@ title: Product Type
 description:
 threshold:
   # todo: split into product-type and copyright as two requirements were mixed into one requirement before.
-  # todo: Merged 1.3 and 1.4 into one as they seem closely related, especially that we don't created combined PFSes any longer.
+  # todo: Merged 1.3 and 1.4 into one as they seem closely related, especially given that we don't create combined PFSes any longer.
   description: |-
     - CEOS-ARD product type name
     - Reference to CEOS-ARD PFS document as URL
@@ -11,6 +11,7 @@ threshold:
 goal: null
 dependencies:
 glossary:
+  - url
 references:
 metadata:
 legacy:
