--- a/requirements/measurements/flattened-phase.yaml
+++ b/requirements/measurements/flattened-phase.yaml
@@ -1,12 +1,11 @@
 title: Flattened Phase
-description: 
+description: |-
+  **Usage: Alternative to GSLC product for NRB and POL products**
 threshold: null
 goal:
   # todo: the list of file format specifications below comes up more often and should be a separate building block
   # todo: todo convert the code block below to a math block
   description: |-
-    **Usage: Alternative to GSLC product for NRB and POL products**
-
     The Flattened Phase is the interferometric phase for which the topographic phase contribution is removed.
     It is derived from the range-Doppler SLC product using a DEM and the orbital state vectors with respect to a reference orbit (see [@sec:annex-sar-topographic-phase-removal]).
     The use of the Flattened Phase with the NRB or POL intensity ([@measurements/backscatter-measurement]) provides the GSLC equivalent, as follows:  
