--- a/pfs/SAR-GSLC/requirements.yaml
+++ b/pfs/SAR-GSLC/requirements.yaml
@@ -1,18 +1,32 @@
 - category: general-metadata
   requirements:
+    # todo: most of the general metadata is product metadata - this should potentially be merged.
     - metadata/traceability
-    - metadata/machine-readability-sar
+    - metadata/machine-readability
+    - metadata/product-type
     - metadata/license
+    - metadata/pfs-url
+    - metadata/time
 - category: source-metadata
   requirements:
-    - metadata/sequential-id
-    - metadata/time-sar
+    - metadata/sequential-id # todo: this is new from the category description
+    - metadata/data-access-source
+    - metadata/instrument
+    - metadata/time-source
+    - metadata/acquisition-parameters-sar
+    - metadata/orbit
+    - metadata/processing-parameters
+    - metadata/image-attributes-sar
+    - metadata/sensor-calibration
+    - metadata/performance-indicators
+    - metadata/polarimetric-calibration-matrices
+    - metadata/mean-faraday-rotation-angle
+    - metadata/ionosphere-indicator
 - category: product-metadata
   requirements:
-    - metadata/product-type
-    - metadata/bounding-box
-    - metadata/crs
-    - metadata/geometric-correction-algorithm # 4.1
+    - metadata/data-access-product # 1.7.1
+    - metadata/bounding-box # 1.7.7
+    - metadata/crs # 1.7.11
 - category: per-pixel-metadata
   requirements:
     - cloud-optimized-formats
@@ -23,4 +37,5 @@
     - measurements/backscatter-gslc # 3.1
 - category: geometric-corrections
   requirements:
+    - metadata/geometric-correction-algorithm # 4.1, todo: should be in product metadata
     - corrections/dem
