--- a/sections/requirement-categories/source-metadata.yaml
+++ b/sections/requirement-categories/source-metadata.yaml
@@ -2,6 +2,6 @@ id: source
 title: Source Metadata
 description: |-
   These are metadata records describing (detailing) **each** acquisition (source data) used to generate the ARD product.
-  This may be one or mutliple acquisitions, depending on the ARD product.
+  This may be one or mutliple acquisitions.
 glossary:
 references:
