--- a/requirements/metadata/time.yaml
+++ b/requirements/metadata/time.yaml
@@ -1,19 +1,19 @@
 title: Data Collection Time
 description:
 threshold:
+  # todo: the number of source data acquisitions has nothing to do with the time requirements, should be separate.
   description: |-
-    The data collection time is identified in the metadata, expressed in date/time, to the second, with the time offset from UTC unambiguously identified.
+    Number of source data acquisitions of the data collection is identified.
+    The start and stop UTC time of data collection is identified in the metadata, expressed in date/time.
+    In case of composite products, the dates/times of the first and last data takes and the per-pixel metadata [@per-pixel-metadata/acquisition-id] is provided with the product.
   notes:
-goal:
-  # todo: this mixes general metadata and per-pixel metadata
-  description: |-
-    Acquisition time for each pixel is identified (or can be reliably determined) in the metadata, expressed in date/time at UTC, to the second.
-  notes:
+goal: null
 dependencies:
+  - per-pixel-metadata/acquisition-id
 glossary:
   - utc
 references:
 metadata:
 legacy:
-  sar: 1.3
-  optical: null
+  sar: 1.5
+  optical:
