--- a/requirements/measurements/backscatter-pol.yaml
+++ b/requirements/measurements/backscatter-pol.yaml
@@ -1,4 +1,4 @@
-title: Backscatter Measurements (POL)
+title: Backscatter Measurements \[POL]
 description: 
 threshold: 
   # todo: the list of file format specifications below comes up more often and should be a separate building block
