--- a/requirements/measurements/backscatter-gslc.yaml
+++ b/requirements/measurements/backscatter-gslc.yaml
@@ -1,4 +1,4 @@
-title: Backscatter Measurements (GSLC)
+title: Backscatter Measurements \[GSLC]
 description: 
 threshold: 
   # todo: the list of file format specifications below comes up more often and should be a separate building block
